--- a/SCD/ui/waterfall.ui
+++ b/SCD/ui/waterfall.ui
@@ -182,7 +182,7 @@
           <item>
            <widget class="QSpinBox" name="min_db">
             <property name="minimum">
-             <number>-100</number>
+             <number>-200</number>
             </property>
             <property name="maximum">
              <number>100</number>
@@ -205,7 +205,7 @@
           <item>
            <widget class="QSpinBox" name="max_db">
             <property name="minimum">
-             <number>-100</number>
+             <number>-200</number>
             </property>
             <property name="maximum">
              <number>100</number>
@@ -219,6 +219,13 @@
            </widget>
           </item>
          </layout>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButton">
+          <property name="text">
+           <string>Auto Scale</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
